Version 0.3
===========

22.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Bugfixes:
    - Fixed the 'create list from category' option
	  - Changed 'denovi' to 'dena'
	  - Fixed the look of the 'sign in button'
	  - Fixed the down arrow when user is not logged in
	* Switched category permalinks to latin

04.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Moved click area for extra info to bottom


03.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Added alt text to tweets/users link
  * Bugfixes
    - Fixed the problem with RT and Reply not working after tweet refresh
    - Corrected the broken design in the sidebar
    - Corrected the design for settings

01.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Replacing register link with cute image
  * Showing users instead of tweets as default
  * Design for category settings page
  * Bugfixes
    - Extended user info is now working after refresh
    - Links on the user tab refer to twitter accounts instead of local ones
    - Reply and retweet options are off if user is not logged in

02.04.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Live tweet stream
  * Fragmented caching 

30.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated to use 6 categories instead of 4

29.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Added GA code
  * Fixing layout problem with two separate columns

28.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated layout and look for members page
  * Updated layour and look for catgories page
  * Refactored users and tweets in their own partials
  * Reply and retweet functionality
  * More info for users
  * Limit tweets
  * Various cosmetic fixes

27.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Fixing the tweeting functionality
  * Added info with toggle function  

08.02.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>