@@ -396,6 +396,13 @@
       .body
         padding-left: 10px
 
+        h3
+          margin-bottom: 0
+
+        .members
+          font-size: 1.2em
+          margin-left: 3px
+
   h2
     background: url(../../images/category-bg.png) no-repeat
     width: 655px
