@@ -3,12 +3,12 @@
   .body
     %span.who= link_to h(user.screen_name), twitter_path(user.screen_name)
     %span.when= t('user.created_at', :time => time_ago_in_words(user.created_at))
-  .clear
-
-  .info{:id => "info_user-#{user.id}-#{name}"}
     .categories
       %b= t('global.categories')
       = user.lists.map { |list| link_to list.name, list }.join(', ')
+  .clear
+
+  .info{:id => "info_user-#{user.id}-#{name}"}
     .bio
       %b= t('global.bio')
       = user.description
@@ -18,7 +18,7 @@
     .web
       %b= t('global.web')
       = link_to user.url, user.url
-    .when= t('user.created_at', :time => time_ago_in_words(user.created_at))
+    //.when= t('user.created_at', :time => time_ago_in_words(user.created_at))
 
   .handle
     &nbsp;
