@@ -740,17 +740,26 @@ body {
   padding-left: 10px;
 }
 /* line 399, ../../../app/stylesheets/application.sass */
+.lists_list .lists .list .body h3 {
+  margin-bottom: 0;
+}
+/* line 402, ../../../app/stylesheets/application.sass */
+.lists_list .lists .list .body .members {
+  font-size: 1.2em;
+  margin-left: 3px;
+}
+/* line 406, ../../../app/stylesheets/application.sass */
 .lists_list h2 {
   background: url(../../images/category-bg.png) no-repeat;
   width: 655px;
 }
 
-/* line 403, ../../../app/stylesheets/application.sass */
+/* line 410, ../../../app/stylesheets/application.sass */
 .pagination {
   text-align: center;
 }
 
-/* line 406, ../../../app/stylesheets/application.sass */
+/* line 413, ../../../app/stylesheets/application.sass */
 #create_list_from_category {
   background: #e1f3fd;
   margin: 10px;
@@ -764,30 +773,30 @@ body {
   margin-right: 10px;
   width: 272.174px;
 }
-/* line 413, ../../../app/stylesheets/application.sass */
+/* line 420, ../../../app/stylesheets/application.sass */
 #create_list_from_category p {
   margin: 10px;
   text-align: center;
 }
-/* line 417, ../../../app/stylesheets/application.sass */
+/* line 424, ../../../app/stylesheets/application.sass */
 #create_list_from_category label {
   margin-left: 5px;
   width: 70px;
   display: inline-block;
 }
-/* line 422, ../../../app/stylesheets/application.sass */
+/* line 429, ../../../app/stylesheets/application.sass */
 #create_list_from_category input {
   margin: 3px;
 }
-/* line 425, ../../../app/stylesheets/application.sass */
+/* line 432, ../../../app/stylesheets/application.sass */
 #create_list_from_category input[type=text] {
   width: 120px;
 }
-/* line 428, ../../../app/stylesheets/application.sass */
+/* line 435, ../../../app/stylesheets/application.sass */
 #create_list_from_category input[type=submit] {
   margin-left: 83px;
 }
-/* line 431, ../../../app/stylesheets/application.sass */
+/* line 438, ../../../app/stylesheets/application.sass */
 #create_list_from_category h2 {
   background: #0094da;
   color: white;
@@ -798,7 +807,7 @@ body {
   -moz-border-radius: 12px;
   -webkit-border-radius: 12px;
 }
-/* line 439, ../../../app/stylesheets/application.sass */
+/* line 446, ../../../app/stylesheets/application.sass */
 #create_list_from_category h2 a {
   color: white;
   font-weight: bold;
@@ -809,12 +818,12 @@ body {
   text-decoration: underline;
 }
 
-/* line 448, ../../../app/stylesheets/application.sass */
+/* line 455, ../../../app/stylesheets/application.sass */
 .modal {
   display: none;
 }
 
-/* line 451, ../../../app/stylesheets/application.sass */
+/* line 458, ../../../app/stylesheets/application.sass */
 .modal div.close {
   background-image: url(../../images/close.png);
   position: absolute;
@@ -826,7 +835,7 @@ body {
   z-index: 9999;
 }
 
-/* line 462, ../../../app/stylesheets/application.sass */
+/* line 469, ../../../app/stylesheets/application.sass */
 form .counter {
   position: absolute;
   left: 15px;
@@ -835,21 +844,21 @@ form .counter {
   font-weight: bold;
   color: #666666;
 }
-/* line 470, ../../../app/stylesheets/application.sass */
+/* line 477, ../../../app/stylesheets/application.sass */
 form .warning {
   color: #660000;
 }
-/* line 472, ../../../app/stylesheets/application.sass */
+/* line 479, ../../../app/stylesheets/application.sass */
 form .exceeded {
   color: #ee0000;
 }
-/* line 475, ../../../app/stylesheets/application.sass */
+/* line 482, ../../../app/stylesheets/application.sass */
 form #tweet_submit {
   padding: 5px;
   float: right;
 }
 
-/* line 479, ../../../app/stylesheets/application.sass */
+/* line 486, ../../../app/stylesheets/application.sass */
 .clear {
   clear: both;
 }
