@@ -10,6 +10,7 @@ Version 0.3
 	  - Fixed the look of the 'sign in button'
 	  - Fixed the down arrow when user is not logged in
 	* Switched category permalinks to latin
+	* User info presents categories
 
 04.05.2010
 ==========
